<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15sp"
    tools:context="com.vahanhar.pcplanner.MainMenu.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="PC Companion"
        android:textColor="#3A6C3C"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="top|start"
        android:text="Login"
        android:textColor="#5DAA60"
        android:textSize="70sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rounded_edittext"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_rounded_edittext"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn1"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="Enter" />


    <TextView
        android:id="@+id/forgot_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="Forgotten password?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/registerNow"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/click_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In As Guest"
        android:textColor="@color/white"
        android:background="@drawable/btn1"
        android:textSize="20dp"
        android:layout_marginTop="25dp"/>



</LinearLayout>